# Hermes-knowledge-base

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  manifest.json  pyproject.toml  requirements.txt
.claude/artifacts/designs/: ui-design-stack.md
.claude/artifacts/plans/: ui-design-stack.md
.claude/artifacts/reviews/: component-library-selector.md  design-spec-skill-creator.md  figma-reader.md  liquid-glass-builder.md  prototype-validator.md  storybook-chromatic.md  (+3 more)
data/: profile.example.json
design/: README.md
design/mockup/: _components.css  _modal-age-gate.html  _modal-import.html  _modal-login.html  _nav.js  _tokens.css  ask.html  audit.html  dashboard.html  doc-detail.html  docs.html  export.html  history.html  index.html  lab.html  recipe-editor.html  recipes.html  tags.html
design/prototype/: _modal-age-gate.html  _modal-import.html  _modal-login.html  _shared.css  ask.html  audit.html  dashboard.html  doc-detail.html  docs.html  export.html  history.html  index.html  lab.html  tags.html
docs/product/: 01-M1验收报告.md  02-需求深度分析.md  03-M2迭代规划.md  04-代码丢失根因分析与根治.md  05-产品定位与应用场景深度分析.md  06-业务场景与核心能力深度分析.md
knowledge/: DECISIONS.md  architecture.md  builder-checker-loop.md  loop-engineering.md  skill-sync-management.md  ui-design-stack.md  working-principles.md
scripts/: calibrate_threshold.py  eval_retrieval.py  git-push.sh  post-commit  preflight.sh  safe_commit.sh  setup-tracking.sh  verify-state.sh  verify_pushed.sh
skills/douyin-reader/: SKILL.md
src/hermes/: __init__.py  config.py  kb_cli.py  loop.py  main.py  mcp.py  orchestrator.py  profile.py  runner.py
src/hermes_kb/: __init__.py  age_gate.py  app.py  bar_assistant_sync.py  config.py  daily_recipe.py  database.py  embedding.py  iba_dataset_importer.py  ima_sync.py  ingredient_strength.py  ingredients.py  lab_dashboard.py  llm.py  missing_stats.py  models.py  parser.py  query_rewriter.py  rag.py  recipe_crud.py  recipe_filter.py  recipe_match.py  recipe_stats.py  recipe_variants.py  retrieval.py  seed.py  seed_recipes.py  substitutes.py  thecocktaildb_sync.py  translation.py
tests/: conftest.py  test_config.py  test_loop.py
tests/eval/: __init__.py  eval_set.jsonl
tests/test_kb/: __init__.py  conftest.py  test_age_gate.py  test_api.py  test_cli.py  test_concurrent_lost_update.py  test_concurrent_writes.py  test_config_security.py  test_edge.py  test_error_handling.py  test_fk_cascade.py  test_iba_dataset_importer.py  test_ima_sync.py  test_ingredient_strength.py  test_ingredients_enhanced.py  test_lab.py  test_lab_ops.py  test_lab_sources.py  test_lab_sync_api.py  test_lab_ugc.py  test_m1.py  test_m2.py  test_quality.py  test_rag.py  test_recipe_match_optimization.py  test_retrieval_exceptions.py  test_stream_leak.py  test_substitutes_expanded.py  test_thecocktaildb_sync.py  test_translation.py  test_vector_retrieval.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
workbench/: INTEGRATION.md  client.py
(+66 files in other folders)
