[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.3.0"
description = "Hermes - AI 原生知识库平台 + Independent agent layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hermes Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language Python :: 3",
    "Programming Language Python :: 3.10",
    "Programming Language Python :: 3.11",
    "Programming Language Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # M0+M1 知识库依赖
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pypdf>=4.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # sqlite-vec ANN 索引（E3）
    "pysqlite3-binary>=0.10",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]
embedding = [
    # 可选：本地 sentence-transformers 后端
    "sentence-transformers>=2.7",
]

[project.scripts]
hermes = "hermes.main:main"
hermes-kb = "hermes.kb_cli:main"
hermes-kb-migrate = "hermes.kb_cli:migrate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
